web/k8s/web-service.yaml


apiVersion: v1

kind: Service

metadata:
  name: web-service

spec:
  selector:
    component: cactus-net-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
